<resources>
    <string name="app_name">Air Eire</string>
    <string name="log_in_text">Log In</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="app_description_text">Book Flights</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hint_first_name">First Name:</string>
    <string name="hint_second_name">Last Name:</string>
    <string name="hint_email">Email:</string>
    <string name="hint_password">Password:</string>
    <string name="welcome">"Welcome !"</string>
    <string name="required_text">Required</string>
    <string name="email_in_use_text">Email already in use</string>
    <string name="account_doesnt_exist_text">Account doesn\'t exist</string>
    <string name="password_incorrect_text">Incorrect Password</string>
    <string name="date_text">Date:</string>
    <string name="from_text">From:</string>
    <string name="to_text">To:</string>
    <string name="time_text">Time:</string>
    <string name="book_button">Book Tickets</string>
    <string name="order_confirmed_text">Order Confirmed!</string>
    <string name="thanks_text">Thanks for choosing Air Eire!</string>
    <string name="book_ticket">Book Tickets</string>
    <string name="my_flights">My Flights</string>
</resources>