<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_name_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:fontFamily="monospace"
        android:textStyle="bold|italic"
        android:text="@string/app_name"
        android:gravity="center"
        android:layout_marginTop="200dp"/>

    <Button
        android:id="@+id/log_in_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/log_in_text"
        style="@style/button_style"/>

    <Button
        android:id="@+id/sign_up_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/sign_up_text"
        style="@style/button_style"/>

    <TextView
        android:id="@+id/app_description_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_description_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"/>
</LinearLayout>