<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar_login"
            layout="@layout/toolbar"/>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/app_name_view_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="50sp"
        android:textColor="?attr/colorPrimary"
        android:fontFamily="monospace"
        android:textStyle="bold|italic"
        android:text="@string/app_name"
        android:gravity="center"
        android:layout_marginTop="40dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_entry_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/hint_email"
        app:endIconMode="clear_text"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_entry_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/hint_password"
        app:errorEnabled="true"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/log_in_button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/log_in_text"
        android:onClick="loginOnClick"
        style="@style/button_style"/>

</LinearLayout>