<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/booking_detail_card"
    android:layout_width="match_parent"
    android:layout_height="150dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/from_label_recycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/from_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/to_label_recycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/to_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/from_label_recycler" />

        <TextView
            android:id="@+id/date_label_recycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/date_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/to_label_recycler" />

        <TextView
            android:id="@+id/time_label_recycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/time_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_label_recycler" />

        <TextView
            android:id="@+id/from_details_recycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="61dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/from_label_recycler"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/to_details_recycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="78dp"
            android:layout_marginTop="43dp"
            app:layout_constraintStart_toEndOf="@+id/to_label_recycler"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/date_details_recycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="71dp"
            app:layout_constraintStart_toEndOf="@+id/date_label_recycler"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/time_details_recycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="62dp"
            android:layout_marginTop="98dp"
            app:layout_constraintStart_toEndOf="@+id/time_label_recycler"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>